# PersonalBeastyTwitchBot

./: .gitignore  README.md  delete_both_token.sh  documentation.md  main.py  migrate_redis_to_unified_user_json.py  pyproject.toml  redis-pubsub-documentation.md  refesh_token.sh  requirements.txt  search_gui.sh
AdminChat/: app.py  app_backup.py
AdminChat/templates/: admin_panel.html
TODOLIST/: clitool.py  todolist.py
TODOLIST/static/: style.css
TODOLIST/templates/: index.html
commands/: __init__.py  admin_logger.py  chat_logger.py  command_logger.py  log_test.py  system_logger.py
commands/Artifical Intelligence/: translate.py  tts_openai.py
commands/admin/: __init__.py  brb.py  discord.py  shoutout.py  todolist.py  unbrb.py
commands/banking/: collect.py  invest.py
commands/dustdunnies/: give.py  roomba.py  steal.py
commands/fighting/: accept.py  fight.py
commands/gambleing/: blackjack.py  gamble.py  slots.py
commands/games/: gameoflife.py
commands/general/: hug.py  lurk.py  points.py  suika.py  timer.py  timezone.py  unlurk.py
commands/obs/: move_fishing.py  test.py
commands/template/: command_template.py
module/: __init__.py  message_utils.py  redis_user_utils.py  shared.py  shared_obs.py  shared_redis.py  user_utils.py
old/src/: BeastyBotMain.py
opendeck/: blurscreen.py  mute.py
opendeck/fuzzy_search/: fuzzy_search.py  search_gui.py  search_gui_windows.py
src/: BeastyBotMain.py  BeastyMiniAdminPost.py  send_shoutout.py  twitch_api_token_script.py  twitch_api_token_script_main_account.py
src/manager/: main_pc.py  main_server.py  (+1 more)
(+23 files in other folders)
